# bashit

./: .gitignore  Cargo.toml  README.md  build.sh
packaging/debian/: control  postinst
packaging/desktop/: bashit.desktop
packaging/firstrun/: bashit.sh
src/: app.rs  icons.rs  main.rs  theme.rs
src/core/: backup.rs  clean.rs  history.rs  mod.rs  profile.rs  sidecar.rs
src/ui/: dialog.rs  filebrowser.rs  footer.rs  list.rs  mod.rs  toolbar.rs
