[package]
name = "bashit"
version = "1.0.0"
edition = "2021"
authors = ["archerprojects <archer.projects@proton.me>"]
description = "Bash command file curator and profile manager"
license = "GPL-3.0-or-later"

[dependencies]
eframe = "0.24"
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
image = { version = "0.24", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
strip = true
lto = true
